# codehound

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  FINDINGS.md
learning/: CODE_WALKTHROUGH_A_TO_Z.md  README.md  codehound_from_scratch.md
learning/week1/: day01_what_is_codehound.md  day02_how_python_runs_code.md  day03_the_ast_module.md  day04_finding_and_check.md  day05_the_parent_map.md
learning/week2/: day06_ast_helpers_i.md  day07_ast_helpers_ii.md  day08_file_discovery.md  day09_orchestration.md  day10_the_package.md  day11_the_registry.md  day12_integration_trace.md
learning/week3/: day13_ch001_blocking_async.md  day14_ch002_mutable_defaults.md  day15_ch003_datetime_utcnow.md  day16_ch004_get_event_loop.md  day17_ch005_resource_leak.md  day18_ch006_floating_task.md  day19_contract_and_precision.md  day20_the_real_bugs.md
learning/week4/: day21_the_cli.md  day22_testing.md  day23_packaging_and_ci.md  day24_capstone_seventh_check.md  day25_defend_it.md
paper/: ARXIV_SUBMISSION.md  PAPER_DRAFT.md  corpus_scan_results.csv  paper.tex
src/codehound/: __init__.py  cli.py  core.py
src/codehound/checks/: __init__.py  blocking_async.py  datetime_utcnow.py  floating_task.py  get_event_loop.py  mutable_defaults.py  resource_leak.py
tests/: test_checks.py
